Ensured correct style for add button and human readable labels

--- a/static/styles.css
+++ b/static/styles.css
@@ -111,6 +111,7 @@ a:hover {
   cursor: pointer;
   transition: background-color 0.3s ease-in-out;
   font-size: 18px;
+  text-align: center
 }
 
 .form-container button:hover {
